work section further alignment fixes

--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ body {
   width: 100%;
   /* padding-top: 100px;
   padding-bottom: 100px; */
-  padding: 10rem 6rem;
+  padding: 10rem 4rem;
 }
 
 .work-container {
@@ -303,7 +303,7 @@ body {
   border-radius: 10px;
   transition: transform 0.3s ease;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 20% 15% 1fr 1fr;
 }
 
 .work-item-content {
